# snake_game_cpp

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Main.vcxproj  Main.vcxproj.filters  README.md  Snake_minigame.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Main.dir/Debug/: Main.exe.recipe  Main.ilk  Main.vcxproj.FileListAbsolute.txt
Main.dir/Debug/Main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  Main.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Main.dir/Release/: Main.exe.recipe  Main.vcxproj.FileListAbsolute.txt
Main.dir/Release/Main.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  Main.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: main.cpp
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog  ZERO_CHECK.lastbuildstate
x64/Release/ALL_BUILD/: ALL_BUILD.recipe
x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
